@@ -746,6 +746,11 @@ ITexture* CD3D9Driver::createDeviceDependentTexture(const io::path& name, IImage
 	imageArray.push_back(image);
 
 	CD3D9Texture* texture = new CD3D9Texture(name, imageArray, ETT_2D, this);
+	if ( !texture->getDX9Texture() )
+	{
+		texture->drop();
+		return 0;
+	}
 
 	return texture;
 }
@@ -753,6 +758,12 @@ ITexture* CD3D9Driver::createDeviceDependentTexture(const io::path& name, IImage
 ITexture* CD3D9Driver::createDeviceDependentTextureCubemap(const io::path& name, const core::array<IImage*>& image)
 {
 	CD3D9Texture* texture = new CD3D9Texture(name, image, ETT_CUBEMAP, this);
+
+	if ( !texture->getDX9CubeTexture() )
+	{
+		texture->drop();
+		return 0;
+	}
 
 	return texture;
 }
@@ -3323,7 +3334,8 @@ IImage* CD3D9Driver::createScreenShot(video::ECOLOR_FORMAT format, video::E_REND
 	if (format==video::ECF_UNKNOWN)
 		format=getColorFormat();
 
-	if (IImage::isRenderTargetOnlyFormat(format) || IImage::isCompressedFormat(format) || IImage::isDepthFormat(format))
+	// TODO: Maybe we could support more formats (floating point and some of those beyond ECF_R8), didn't really try yet 
+	if (IImage::isCompressedFormat(format) || IImage::isDepthFormat(format) || IImage::isFloatingPointFormat(format) || format >= ECF_R8)
 		return 0;
 
 	// query the screen dimensions of the current adapter
@@ -3481,6 +3493,7 @@ D3DFORMAT CD3D9Driver::getD3DFormatFromColorFormat(ECOLOR_FORMAT format) const
 			return D3DFMT_R8G8B8;
 		case ECF_A8R8G8B8:
 			return D3DFMT_A8R8G8B8;
+
 		case ECF_DXT1:
 			return D3DFMT_DXT1;
 		case ECF_DXT2:
@@ -3503,6 +3516,16 @@ D3DFORMAT CD3D9Driver::getD3DFormatFromColorFormat(ECOLOR_FORMAT format) const
 			return D3DFMT_G32R32F;
 		case ECF_A32B32G32R32F:
 			return D3DFMT_A32B32G32R32F;
+
+		case ECF_R8:
+			return D3DFMT_A8;	// not correct, but somewhat similar
+		case ECF_R8G8:
+			return D3DFMT_A8L8;	// not correct, but somewhat similar
+		case ECF_R16:
+			return D3DFMT_L16;	// not correct, but somewhat similar
+		case ECF_R16G16:
+			return D3DFMT_G16R16;	// flipped :-(
+
 		case ECF_D16:
 			return D3DFMT_D16;
 		case ECF_D24S8:
