@@ -431,7 +431,8 @@ public:
 protected:
 	ECOLOR_FORMAT getBestColorFormat(ECOLOR_FORMAT format)
 	{
-		ECOLOR_FORMAT destFormat = (!IImage::isCompressedFormat(format)) ? ECF_A8R8G8B8 : format;
+		// We only try for to adapt "simple" formats
+		ECOLOR_FORMAT destFormat = (format <= ECF_A8R8G8B8) ? ECF_A8R8G8B8 : format;
 
 		switch (format)
 		{
@@ -441,7 +442,7 @@ protected:
 			break;
 		case ECF_R5G6B5:
 			if (!Driver->getTextureCreationFlag(ETCF_ALWAYS_32_BIT))
-				destFormat = ECF_A1R5G5B5;
+				destFormat = ECF_R5G6B5;
 			break;
 		case ECF_A8R8G8B8:
 			if (Driver->getTextureCreationFlag(ETCF_ALWAYS_16_BIT) ||
@@ -449,6 +450,7 @@ protected:
 				destFormat = ECF_A1R5G5B5;
 			break;
 		case ECF_R8G8B8:
+			// Note: Using ECF_A8R8G8B8 even when ETCF_ALWAYS_32_BIT is not set as 24 bit textures fail with too many cards
 			if (Driver->getTextureCreationFlag(ETCF_ALWAYS_16_BIT) || Driver->getTextureCreationFlag(ETCF_OPTIMIZED_FOR_SPEED))
 				destFormat = ECF_A1R5G5B5;
 		default:
